# GraphKernels

./: .gitignore  .pylintrc  .travis.yml  AUTHORS.md  CPPLINT.cfg  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
GKextCPy/: GKextCPy.cpp  GKextCPy.h  GKextCPy.i  GKextCPy.py  graphkernels.cpp  graphkernels.h  kernels.py  utilities.py
Tutorial/: README.md  demo_grid_search.py  demo_mutag.py  mutag_pydata.py
graphkernels/: eigen.i  graphkernels.cpp  graphkernels.h  graphkernels.i  kernels.py  numpy.i  utilities.py
graphkernels/cppkernels/: connected_graphlet.cpp  connected_graphlet.h  graphlet.cpp  graphlet.h  histogram.cpp  histogram.h  rest.cpp  rest.h  wl.cpp  wl.h
src/: setup.py
src/GKextCPy/: MANIFEST.in  pyproject.toml  setup.py
src/graphkernels/: MANIFEST.in  README.md  setup.py
src/graphkernels/graphkernels/: __init__.py  kernels.py  utilities.py
