[build-system]
# Minimum requirements for the build system to execute.
requires = [
    'numpy>=1.11',
    'pkgconfig',
    'setuptools>=38.6.0',
    'wheel',
] # PEP 508 specifications.

[tool.black]
check = true
exclude = 'graphkernels.py'
line-length = 80
skip-string-normalization = true
target-version = ['py36']
