[build-system]
# Minimum requirements for the build system to execute.
requires = [
    'numpy>=1.13.3',
    'pkgconfig>=1.5.0',
    'setuptools>=38.6.0',
    'wheel',
] # PEP 508 specifications.

[tool.black]
exclude = 'graphkernels.py'
line-length = 80
skip-string-normalization = true
target-version = ['py36']

[tool.check-manifest]
ignore = [
    '.travis.yml',
    'graphkernels/graphkernels.py',
    'graphkernels/graphkernels_wrap.cpp',
]
