[metadata]
author = Elisabetta Ghisu
author_email = elisabetta.ghisu@bsse.ethz.ch
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Mathematics
description = Package for computing graph kernels
url = https://github.com/BorgwardtLab/GraphKernels
license = ETH Zurich
license_file = LICENSE.md
long_description = file: README.md
name = graphkernels

[options]
include_package_data = true
install_requires =
    numpy>=1.11
    pkgconfig
    python-igraph
packages = graphkernels
python_requires = >= 3.4
setup_requires =
    numpy>=1.11
    pkgconfig
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
tests_require =
    check-manifest
    cpplint
    pylint
    pyroma>=2.4
zip_safe = false
