[metadata]
author = Elisabetta Ghisu
author_email = elisabetta.ghisu@bsse.ethz.ch
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Mathematics
description = Package for computing graph kernels
maintainer = Nikolaos Korasidis
maintainer_email = nkorasid@student.ethz.ch
name = graphkernels
license = MIT License
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BorgwardtLab/GraphKernels

[options]
include_package_data = true
install_requires =
    numpy>=1.13.3
    pkgconfig
    python-igraph
packages = graphkernels
python_requires = >= 3.4
setup_requires =
    numpy>=1.13.3
    pkgconfig
    setuptools>=38.6.0
tests_require =
    black
    check-manifest
    cpplint
    pylint
    pyroma>=2.4
    scikit-learn
zip_safe = false
